Created comprehensive trading dashboard

--- a/docs/examples/candlestick/pattern_visualization.ipynb
+++ b/docs/examples/candlestick/pattern_visualization.ipynb
@@ -10676,6 +10676,425 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 5. Final Integration: Comprehensive Trading Dashboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Final Integration: Comprehensive Trading Dashboard\n",
+    "def create_comprehensive_trading_dashboard(data, config):\n",
+    "    \"\"\"Create a comprehensive trading dashboard integrating multiple visualization components\"\"\"\n",
+    "    \n",
+    "    # First, calculate all necessary indicators and data\n",
+    "    def prepare_dashboard_data(data):\n",
+    "        \"\"\"Prepare all data needed for the dashboard\"\"\"\n",
+    "        df = data.copy()\n",
+    "        \n",
+    "        # Technical indicators\n",
+    "        df['SMA20'] = df['Close'].rolling(window=20).mean()\n",
+    "        df['SMA50'] = df['Close'].rolling(window=50).mean()\n",
+    "        df['SMA200'] = df['Close'].rolling(window=200).mean()\n",
+    "        df['EMA20'] = df['Close'].ewm(span=20, adjust=False).mean()\n",
+    "        \n",
+    "        # Bollinger Bands\n",
+    "        df['BB_Middle'] = df['Close'].rolling(window=20).mean()\n",
+    "        df['BB_Std'] = df['Close'].rolling(window=20).std()\n",
+    "        df['BB_Upper'] = df['BB_Middle'] + 2 * df['BB_Std']\n",
+    "        df['BB_Lower'] = df['BB_Middle'] - 2 * df['BB_Std']\n",
+    "        \n",
+    "        # RSI\n",
+    "        delta = df['Close'].diff()\n",
+    "        gain = delta.clip(lower=0)\n",
+    "        loss = -delta.clip(upper=0)\n",
+    "        avg_gain = gain.rolling(window=14).mean()\n",
+    "        avg_loss = loss.rolling(window=14).mean()\n",
+    "        rs = avg_gain / avg_loss\n",
+    "        df['RSI'] = 100 - (100 / (1 + rs))\n",
+    "        \n",
+    "        # MACD\n",
+    "        df['MACD'] = df['Close'].ewm(span=12, adjust=False).mean() - df['Close'].ewm(span=26, adjust=False).mean()\n",
+    "        df['MACD_Signal'] = df['MACD'].ewm(span=9, adjust=False).mean()\n",
+    "        df['MACD_Hist'] = df['MACD'] - df['MACD_Signal']\n",
+    "        \n",
+    "        # Volume analysis\n",
+    "        df['Volume_SMA20'] = df['Volume'].rolling(window=20).mean()\n",
+    "        \n",
+    "        # Performance metrics\n",
+    "        df['1D_Return'] = df['Close'].pct_change() * 100\n",
+    "        df['5D_Return'] = df['Close'].pct_change(5) * 100\n",
+    "        df['20D_Return'] = df['Close'].pct_change(20) * 100\n",
+    "        df['Volatility'] = df['1D_Return'].rolling(window=20).std() * np.sqrt(252)\n",
+    "        \n",
+    "        return df\n",
+    "    \n",
+    "    # Prepare data\n",
+    "    dashboard_data = prepare_dashboard_data(data)\n",
+    "    \n",
+    "    # Create dashboard layout\n",
+    "    dashboard = make_subplots(\n",
+    "        rows=4, cols=3,\n",
+    "        subplot_titles=(\n",
+    "            \"Price Chart\", \"Volume Analysis\", \"Technical Overview\",\n",
+    "            \"RSI\", \"MACD\", \"Volatility\",\n",
+    "            \"Performance Metrics\", \"Price Distribution\", \"Trading Signals\",\n",
+    "            \"Summary Statistics\", \"\", \"\"\n",
+    "        ),\n",
+    "        specs=[\n",
+    "            [{\"rowspan\": 2, \"colspan\": 2}, {\"rowspan\": 1, \"colspan\": 1}, None],\n",
+    "            [None, None, {\"rowspan\": 2, \"colspan\": 1}],\n",
+    "            [{\"rowspan\": 1, \"colspan\": 1}, {\"rowspan\": 1, \"colspan\": 1}, None],\n",
+    "            [{\"rowspan\": 1, \"colspan\": 1}, {\"type\": \"table\", \"colspan\": 2}, None]\n",
+    "        ],\n",
+    "        vertical_spacing=0.08,\n",
+    "        horizontal_spacing=0.03\n",
+    "    )\n",
+    "    \n",
+    "    # 1. Main Price Chart (with indicators overlay)\n",
+    "    dashboard.add_trace(\n",
+    "        go.Candlestick(\n",
+    "            x=dashboard_data.index,\n",
+    "            open=dashboard_data['Open'],\n",
+    "            high=dashboard_data['High'],\n",
+    "            low=dashboard_data['Low'],\n",
+    "            close=dashboard_data['Close'],\n",
+    "            name='Price'\n",
+    "        ),\n",
+    "        row=1, col=1\n",
+    "    )\n",
+    "    \n",
+    "    # Add moving averages\n",
+    "    dashboard.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['SMA20'],\n",
+    "            line=dict(color='blue', width=1),\n",
+    "            name='SMA(20)'\n",
+    "        ),\n",
+    "        row=1, col=1\n",
+    "    )\n",
+    "    \n",
+    "    dashboard.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['SMA50'],\n",
+    "            line=dict(color='orange', width=1),\n",
+    "            name='SMA(50)'\n",
+    "        ),\n",
+    "        row=1, col=1\n",
+    "    )\n",
+    "    \n",
+    "    dashboard.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['SMA200'],\n",
+    "            line=dict(color='purple', width=1.5),\n",
+    "            name='SMA(200)'\n",
+    "        ),\n",
+    "        row=1, col=1\n",
+    "    )\n",
+    "    \n",
+    "    # Add Bollinger Bands\n",
+    "    dashboard.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['BB_Upper'],\n",
+    "            line=dict(color='rgba(0,0,255,0.5)', width=1, dash='dash'),\n",
+    "            name='BB Upper'\n",
+    "        ),\n",
+    "        row=1, col=1\n",
+    "    )\n",
+    "    \n",
+    "    dashboard.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['BB_Lower'],\n",
+    "            line=dict(color='rgba(0,0,255,0.5)', width=1, dash='dash'),\n",
+    "            name='BB Lower',\n",
+    "            fill='tonexty',\n",
+    "            fillcolor='rgba(0,0,255,0.05)'\n",
+    "        ),\n",
+    "        row=1, col=1\n",
+    "    )\n",
+    "    \n",
+    "    # 2. Volume Analysis\n",
+    "    dashboard.add_trace(\n",
+    "        go.Bar(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['Volume'],\n",
+    "            marker_color=['green' if c >= o else 'red' \n",
+    "                        for c, o in zip(dashboard_data['Close'], dashboard_data['Open'])],\n",
+    "            name='Volume'\n",
+    "        ),\n",
+    "        row=1, col=3\n",
+    "    )\n",
+    "    \n",
+    "    dashboard.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['Volume_SMA20'],\n",
+    "            line=dict(color='blue', width=1.5),\n",
+    "            name='Volume SMA(20)'\n",
+    "        ),\n",
+    "        row=1, col=3\n",
+    "    )\n",
+    "    \n",
+    "    # 3. RSI\n",
+    "    dashboard.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['RSI'],\n",
+    "            line=dict(color='purple', width=1.5),\n",
+    "            name='RSI(14)'\n",
+    "        ),\n",
+    "        row=3, col=1\n",
+    "    )\n",
+    "    \n",
+    "    # Add RSI reference lines\n",
+    "    dashboard.add_shape(\n",
+    "        type=\"line\",\n",
+    "        x0=dashboard_data.index[0],\n",
+    "        y0=70,\n",
+    "        x1=dashboard_data.index[-1],\n",
+    "        y1=70,\n",
+    "        line=dict(color=\"red\", width=1, dash=\"dash\"),\n",
+    "        row=3, col=1\n",
+    "    )\n",
+    "    \n",
+    "    dashboard.add_shape(\n",
+    "        type=\"line\",\n",
+    "        x0=dashboard_data.index[0],\n",
+    "        y0=30,\n",
+    "        x1=dashboard_data.index[-1],\n",
+    "        y1=30,\n",
+    "        line=dict(color=\"green\", width=1, dash=\"dash\"),\n",
+    "        row=3, col=1\n",
+    "    )\n",
+    "    \n",
+    "    # 4. MACD\n",
+    "    dashboard.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['MACD'],\n",
+    "            line=dict(color='blue', width=1.5),\n",
+    "            name='MACD'\n",
+    "        ),\n",
+    "        row=3, col=2\n",
+    "    )\n",
+    "    \n",
+    "    dashboard.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['MACD_Signal'],\n",
+    "            line=dict(color='red', width=1.5),\n",
+    "            name='Signal'\n",
+    "        ),\n",
+    "        row=3, col=2\n",
+    "    )\n",
+    "    \n",
+    "    dashboard.add_trace(\n",
+    "        go.Bar(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['MACD_Hist'],\n",
+    "            marker_color=['green' if x > 0 else 'red' for x in dashboard_data['MACD_Hist']],\n",
+    "            name='MACD Histogram'\n",
+    "        ),\n",
+    "        row=3, col=2\n",
+    "    )\n",
+    "    \n",
+    "    # 5. Volatility\n",
+    "    dashboard.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=dashboard_data.index,\n",
+    "            y=dashboard_data['Volatility'],\n",
+    "            line=dict(color='darkred', width=1.5),\n",
+    "            name='Volatility'\n",
+    "        ),\n",
+    "        row=2, col=3\n",
+    "    )\n",
+    "    \n",
+    "    # 6. Performance Metrics\n",
+    "    dashboard.add_trace(\n",
+    "        go.Bar(\n",
+    "            x=['1-Day', '5-Day', '20-Day'],\n",
+    "            y=[\n",
+    "                dashboard_data['1D_Return'].iloc[-1],\n",
+    "                dashboard_data['5D_Return'].iloc[-1],\n",
+    "                dashboard_data['20D_Return'].iloc[-1]\n",
+    "            ],\n",
+    "            marker_color=[\n",
+    "                'green' if dashboard_data['1D_Return'].iloc[-1] > 0 else 'red',\n",
+    "                'green' if dashboard_data['5D_Return'].iloc[-1] > 0 else 'red',\n",
+    "                'green' if dashboard_data['20D_Return'].iloc[-1] > 0 else 'red'\n",
+    "            ],\n",
+    "            name='Returns'\n",
+    "        ),\n",
+    "        row=3, col=3\n",
+    "    )\n",
+    "    \n",
+    "    # 7. Price Distribution\n",
+    "    dashboard.add_trace(\n",
+    "        go.Histogram(\n",
+    "            x=dashboard_data['Close'],\n",
+    "            nbinsx=30,\n",
+    "            marker_color='blue',\n",
+    "            opacity=0.7,\n",
+    "            name='Price Distribution'\n",
+    "        ),\n",
+    "        row=4, col=1\n",
+    "    )\n",
+    "    \n",
+    "    # 8. Summary Statistics Table\n",
+    "    # Calculate key statistics\n",
+    "    summary = {\n",
+    "        'Metric': [\n",
+    "            'Current Price',\n",
+    "            'Period Return',\n",
+    "            'Volatility (Ann.)',\n",
+    "            'SMA20 Status',\n",
+    "            'SMA50 Status',\n",
+    "            'SMA200 Status',\n",
+    "            'RSI (14)',\n",
+    "            'MACD Signal'\n",
+    "        ],\n",
+    "        'Value': [\n",
+    "            f\"${dashboard_data['Close'].iloc[-1]:.2f}\",\n",
+    "            f\"{(dashboard_data['Close'].iloc[-1] / dashboard_data['Close'].iloc[0] - 1) * 100:.2f}%\",\n",
+    "            f\"{dashboard_data['Volatility'].iloc[-1]:.2f}%\",\n",
+    "            'Above' if dashboard_data['Close'].iloc[-1] > dashboard_data['SMA20'].iloc[-1] else 'Below',\n",
+    "            'Above' if dashboard_data['Close'].iloc[-1] > dashboard_data['SMA50'].iloc[-1] else 'Below',\n",
+    "            'Above' if dashboard_data['Close'].iloc[-1] > dashboard_data['SMA200'].iloc[-1] else 'Below',\n",
+    "            f\"{dashboard_data['RSI'].iloc[-1]:.2f}\",\n",
+    "            'Bullish' if dashboard_data['MACD'].iloc[-1] > dashboard_data['MACD_Signal'].iloc[-1] else 'Bearish'\n",
+    "        ]\n",
+    "    }\n",
+    "    \n",
+    "    # Create table\n",
+    "    dashboard.add_trace(\n",
+    "        go.Table(\n",
+    "            header=dict(\n",
+    "                values=['Metric', 'Value'],\n",
+    "                fill_color='paleturquoise',\n",
+    "                align='left',\n",
+    "                font=dict(size=14)\n",
+    "            ),\n",
+    "            cells=dict(\n",
+    "                values=[summary['Metric'], summary['Value']],\n",
+    "                fill_color=[\n",
+    "                    'white',\n",
+    "                    ['white' if i != 7 else\n",
+    "                    'lightgreen' if v == 'Bullish' else \n",
+    "                    'lightcoral' if v == 'Bearish' else\n",
+    "                    'white' for i, v in enumerate(summary['Value'])]\n",
+    "                ],\n",
+    "                align='left',\n",
+    "                font=dict(size=12)\n",
+    "            )\n",
+    "        ),\n",
+    "        row=4, col=2\n",
+    "    )\n",
+    "    \n",
+    "    # 9. Technical Overview (text annotation)\n",
+    "    # Determine market condition\n",
+    "    last_close = dashboard_data['Close'].iloc[-1]\n",
+    "    sma20 = dashboard_data['SMA20'].iloc[-1]\n",
+    "    sma50 = dashboard_data['SMA50'].iloc[-1]\n",
+    "    sma200 = dashboard_data['SMA200'].iloc[-1]\n",
+    "    rsi = dashboard_data['RSI'].iloc[-1]\n",
+    "    \n",
+    "    if last_close > sma20 and last_close > sma50 and last_close > sma200:\n",
+    "        trend = \"Strong Uptrend\"\n",
+    "        color = \"green\"\n",
+    "    elif last_close > sma20 and last_close > sma50:\n",
+    "        trend = \"Uptrend\"\n",
+    "        color = \"green\"\n",
+    "    elif last_close < sma20 and last_close < sma50 and last_close < sma200:\n",
+    "        trend = \"Strong Downtrend\"\n",
+    "        color = \"red\"\n",
+    "    elif last_close < sma20 and last_close < sma50:\n",
+    "        trend = \"Downtrend\"\n",
+    "        color = \"red\"\n",
+    "    else:\n",
+    "        trend = \"Sideways/Neutral\"\n",
+    "        color = \"blue\"\n",
+    "    \n",
+    "    # Add trend annotation\n",
+    "    dashboard.add_annotation(\n",
+    "        text=f\"Market Condition: {trend}\",\n",
+    "        x=0.5,\n",
+    "        y=0.5,\n",
+    "        xref=\"x domain\",\n",
+    "        yref=\"y domain\",\n",
+    "        showarrow=False,\n",
+    "        font=dict(size=16, color=color),\n",
+    "        row=1, col=2\n",
+    "    )\n",
+    "    \n",
+    "    # Add additional technical insights\n",
+    "    if rsi > 70:\n",
+    "        rsi_signal = \"Overbought (>70)\"\n",
+    "        rsi_color = \"red\"\n",
+    "    elif rsi < 30:\n",
+    "        rsi_signal = \"Oversold (<30)\"\n",
+    "        rsi_color = \"green\"\n",
+    "    else:\n",
+    "        rsi_signal = \"Neutral\"\n",
+    "        rsi_color = \"black\"\n",
+    "    \n",
+    "    dashboard.add_annotation(\n",
+    "        text=f\"RSI: {rsi_signal}\",\n",
+    "        x=0.5,\n",
+    "        y=0.4,\n",
+    "        xref=\"x domain\",\n",
+    "        yref=\"y domain\",\n",
+    "        showarrow=False,\n",
+    "        font=dict(size=14, color=rsi_color),\n",
+    "        row=1, col=2\n",
+    "    )\n",
+    "    \n",
+    "    # Update layout\n",
+    "    dashboard.update_layout(\n",
+    "        title=\"Comprehensive Trading Dashboard\",\n",
+    "        height=1200,\n",
+    "        width=1600,\n",
+    "        showlegend=True,\n",
+    "        legend=dict(\n",
+    "            orientation=\"h\",\n",
+    "            yanchor=\"bottom\",\n",
+    "            y=1.02,\n",
+    "            xanchor=\"right\",\n",
+    "            x=1\n",
+    "        ),\n",
+    "        hovermode=\"x unified\"\n",
+    "    )\n",
+    "    \n",
+    "    # Update y-axis ranges for RSI and MACD\n",
+    "    dashboard.update_yaxes(range=[0, 100], row=3, col=1)\n",
+    "    \n",
+    "    return dashboard\n",
+    "\n",
+    "# Create comprehensive trading dashboard\n",
+    "try:\n",
+    "    comprehensive_dashboard = create_comprehensive_trading_dashboard(\n",
+    "        apple_data, \n",
+    "        viz_env['default_config']\n",
+    "    )\n",
+    "    \n",
+    "    # Display dashboard\n",
+    "    comprehensive_dashboard.show()\n",
+    "    \n",
+    "    print(\"Comprehensive trading dashboard created successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating comprehensive dashboard: {str(e)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
