Completed real time data streaming functionality

--- a/docs/examples/candlestick/pattern_visualization.ipynb
+++ b/docs/examples/candlestick/pattern_visualization.ipynb
@@ -61131,7 +61131,332 @@
     "        self._reapply_indicators()\n",
     "        self._reapply_patterns()\n",
     "        \n",
-    "        return self.fig"
+    "        return self.fig\n",
+    "    \n",
+    "    def _calculate_indicator(self, indicator_name, params):\n",
+    "        \"\"\"\n",
+    "        Calculate technical indicator\n",
+    "        \n",
+    "        Args:\n",
+    "            indicator_name (str): Name of indicator\n",
+    "            params (dict): Indicator parameters\n",
+    "            \n",
+    "        Returns:\n",
+    "            Union[pd.Series, pd.DataFrame]: Indicator data\n",
+    "        \"\"\"\n",
+    "        df = self.visualizer.df\n",
+    "        \n",
+    "        # Simple Moving Average\n",
+    "        if indicator_name == 'sma':\n",
+    "            period = params.get('period', 20)\n",
+    "            return df['Close'].rolling(window=period).mean()\n",
+    "        \n",
+    "        # Exponential Moving Average\n",
+    "        elif indicator_name == 'ema':\n",
+    "            period = params.get('period', 20)\n",
+    "            return df['Close'].ewm(span=period, adjust=False).mean()\n",
+    "        \n",
+    "        # Bollinger Bands\n",
+    "        elif indicator_name == 'bollinger_bands':\n",
+    "            period = params.get('period', 20)\n",
+    "            std_dev = params.get('std_dev', 2)\n",
+    "            \n",
+    "            middle = df['Close'].rolling(window=period).mean()\n",
+    "            std = df['Close'].rolling(window=period).std()\n",
+    "            \n",
+    "            upper = middle + (std * std_dev)\n",
+    "            lower = middle - (std * std_dev)\n",
+    "            \n",
+    "            return pd.DataFrame({\n",
+    "                'middle': middle,\n",
+    "                'upper': upper,\n",
+    "                'lower': lower\n",
+    "            })\n",
+    "        \n",
+    "        # Relative Strength Index\n",
+    "        elif indicator_name == 'rsi':\n",
+    "            period = params.get('period', 14)\n",
+    "            delta = df['Close'].diff()\n",
+    "            \n",
+    "            gain = delta.where(delta > 0, 0)\n",
+    "            loss = -delta.where(delta < 0, 0)\n",
+    "            \n",
+    "            avg_gain = gain.rolling(window=period).mean()\n",
+    "            avg_loss = loss.rolling(window=period).mean()\n",
+    "            \n",
+    "            rs = pd.Series(0, index=df.index)  # Initialize with zeros\n",
+    "            valid_denominator = avg_loss != 0\n",
+    "            rs[valid_denominator] = avg_gain[valid_denominator] / avg_loss[valid_denominator]\n",
+    "            \n",
+    "            rsi = 100 - (100 / (1 + rs))\n",
+    "            return rsi\n",
+    "        \n",
+    "        # MACD\n",
+    "        elif indicator_name == 'macd':\n",
+    "            fast_period = params.get('fast_period', 12)\n",
+    "            slow_period = params.get('slow_period', 26)\n",
+    "            signal_period = params.get('signal_period', 9)\n",
+    "            \n",
+    "            fast_ema = df['Close'].ewm(span=fast_period, adjust=False).mean()\n",
+    "            slow_ema = df['Close'].ewm(span=slow_period, adjust=False).mean()\n",
+    "            \n",
+    "            macd_line = fast_ema - slow_ema\n",
+    "            signal_line = macd_line.ewm(span=signal_period, adjust=False).mean()\n",
+    "            \n",
+    "            return pd.DataFrame({\n",
+    "                'macd': macd_line,\n",
+    "                'signal': signal_line,\n",
+    "                'histogram': macd_line - signal_line\n",
+    "            })\n",
+    "        \n",
+    "        # Stochastic Oscillator\n",
+    "        elif indicator_name == 'stochastic':\n",
+    "            k_period = params.get('k_period', 14)\n",
+    "            d_period = params.get('d_period', 3)\n",
+    "            \n",
+    "            low_min = df['Low'].rolling(window=k_period).min()\n",
+    "            high_max = df['High'].rolling(window=k_period).max()\n",
+    "            \n",
+    "            # Calculate %K\n",
+    "            k = ((df['Close'] - low_min) / (high_max - low_min)) * 100\n",
+    "            \n",
+    "            # Calculate %D (moving average of %K)\n",
+    "            d = k.rolling(window=d_period).mean()\n",
+    "            \n",
+    "            return pd.DataFrame({\n",
+    "                'k': k,\n",
+    "                'd': d\n",
+    "            })\n",
+    "        \n",
+    "        # Average True Range (ATR)\n",
+    "        elif indicator_name == 'atr':\n",
+    "            period = params.get('period', 14)\n",
+    "            \n",
+    "            high = df['High']\n",
+    "            low = df['Low']\n",
+    "            close = df['Close']\n",
+    "            \n",
+    "            # Calculate True Range\n",
+    "            tr1 = high - low\n",
+    "            tr2 = abs(high - close.shift())\n",
+    "            tr3 = abs(low - close.shift())\n",
+    "            \n",
+    "            tr = pd.concat([tr1, tr2, tr3], axis=1).max(axis=1)\n",
+    "            \n",
+    "            # Calculate ATR\n",
+    "            atr = tr.rolling(window=period).mean()\n",
+    "            \n",
+    "            return atr\n",
+    "        \n",
+    "        else:\n",
+    "            print(f\"Unsupported indicator: {indicator_name}\")\n",
+    "            return None\n",
+    "    \n",
+    "    def _reapply_indicators(self):\n",
+    "        \"\"\"Reapply all active indicators\"\"\"\n",
+    "        for indicator_key in self.current_indicators:\n",
+    "            # Parse indicator name and parameters\n",
+    "            parts = indicator_key.split('_', 1)\n",
+    "            indicator_name = parts[0]\n",
+    "            \n",
+    "            if len(parts) > 1:\n",
+    "                try:\n",
+    "                    params = eval(parts[1])\n",
+    "                except:\n",
+    "                    params = {}\n",
+    "            else:\n",
+    "                params = {}\n",
+    "            \n",
+    "            # Add indicator\n",
+    "            self.add_indicator(indicator_name, params)\n",
+    "    \n",
+    "    def _reapply_patterns(self):\n",
+    "        \"\"\"Reapply all active pattern detections\"\"\"\n",
+    "        for pattern_name in self.current_patterns:\n",
+    "            self.add_pattern_detection(pattern_name)\n",
+    "    \n",
+    "    def get_current_figure(self):\n",
+    "        \"\"\"\n",
+    "        Get current visualization figure\n",
+    "        \n",
+    "        Returns:\n",
+    "            go.Figure: Current Plotly figure\n",
+    "        \"\"\"\n",
+    "        return self.fig\n",
+    "    \n",
+    "    def apply_theme(self, theme_name):\n",
+    "        \"\"\"\n",
+    "        Apply theme to visualization\n",
+    "        \n",
+    "        Args:\n",
+    "            theme_name (str): Name of theme\n",
+    "            \n",
+    "        Returns:\n",
+    "            go.Figure: Updated figure\n",
+    "        \"\"\"\n",
+    "        # Apply theme to figure\n",
+    "        self.fig.update_layout(template=theme_name)\n",
+    "        \n",
+    "        # Update config\n",
+    "        self.config.theme = theme_name\n",
+    "        \n",
+    "        return self.fig\n",
+    "        \n",
+    "    def update_with_new_data(self, new_data):\n",
+    "        \"\"\"\n",
+    "        Update visualization with new data\n",
+    "        \n",
+    "        Args:\n",
+    "            new_data (pd.DataFrame): New OHLCV data\n",
+    "            \n",
+    "        Returns:\n",
+    "            go.Figure: Updated figure\n",
+    "        \"\"\"\n",
+    "        # Update base data\n",
+    "        self.base_df = pd.concat([self.base_df, new_data]).sort_index()\n",
+    "        \n",
+    "        # Recreate visualizer with updated data\n",
+    "        self.visualizer = CandlestickVisualizer(self.base_df, self.config)\n",
+    "        \n",
+    "        # Recreate figure\n",
+    "        self._initialize_visualization()\n",
+    "        \n",
+    "        # Reapply indicators and patterns\n",
+    "        self._reapply_indicators()\n",
+    "        self._reapply_patterns()\n",
+    "        \n",
+    "        return self.fig\n",
+    "\n",
+    "    # 1.2 Real-time pattern detection\n",
+    "    def demo_realtime_pattern_detection(base_df, duration=30, interval=1.0):\n",
+    "        \"\"\"\n",
+    "        Demonstrate real-time pattern detection\n",
+    "        \n",
+    "        Args:\n",
+    "            base_df (pd.DataFrame): Initial OHLCV data\n",
+    "            duration (int): Demo duration in seconds\n",
+    "            interval (float): Update interval in seconds\n",
+    "            \n",
+    "        Returns:\n",
+    "            dict: Results of real-time pattern detection\n",
+    "        \"\"\"\n",
+    "        # Configure streaming visualizer\n",
+    "        config = VisualizationConfig()\n",
+    "        streamer = StreamingCandlestickVisualizer(base_df, config, update_interval=interval)\n",
+    "        \n",
+    "        # Initialize pattern tracking\n",
+    "        pattern_tracker = {\n",
+    "            'timestamps': [],\n",
+    "            'detected_patterns': [],\n",
+    "            'price_changes': []\n",
+    "        }\n",
+    "        \n",
+    "        # Define callback for new data\n",
+    "        def on_new_data(df, fig):\n",
+    "            # Detect patterns\n",
+    "            patterns = streamer.detect_patterns_realtime()\n",
+    "            \n",
+    "            # Track any patterns detected in the latest candle\n",
+    "            latest_idx = df.index[-1]\n",
+    "            \n",
+    "            detected = []\n",
+    "            for pattern_name, pattern_signals in patterns.items():\n",
+    "                if isinstance(pattern_signals, tuple):\n",
+    "                    # Check bullish patterns\n",
+    "                    if pattern_signals[0].loc[latest_idx]:\n",
+    "                        detected.append(f\"{pattern_name}_bullish\")\n",
+    "                    # Check bearish patterns\n",
+    "                    if pattern_signals[1].loc[latest_idx]:\n",
+    "                        detected.append(f\"{pattern_name}_bearish\")\n",
+    "                else:\n",
+    "                    # Check neutral patterns\n",
+    "                    if pattern_signals.loc[latest_idx]:\n",
+    "                        detected.append(pattern_name)\n",
+    "            \n",
+    "            if detected:\n",
+    "                # Calculate price change from previous candle\n",
+    "                if len(df) > 1:\n",
+    "                    price_change = (df['Close'].iloc[-1] / df['Close'].iloc[-2] - 1) * 100\n",
+    "                else:\n",
+    "                    price_change = 0.0\n",
+    "                    \n",
+    "                # Add to tracker\n",
+    "                pattern_tracker['timestamps'].append(latest_idx)\n",
+    "                pattern_tracker['detected_patterns'].append(detected)\n",
+    "                pattern_tracker['price_changes'].append(price_change)\n",
+    "                \n",
+    "                print(f\"{latest_idx}: Detected {', '.join(detected)} (Price change: {price_change:.2f}%)\")\n",
+    "        \n",
+    "        # Start streaming with callback\n",
+    "        print(\"Starting real-time pattern detection demo...\")\n",
+    "        streamer.start_streaming(callback=on_new_data)\n",
+    "        \n",
+    "        # Run for specified duration\n",
+    "        time.sleep(duration)\n",
+    "        \n",
+    "        # Stop streaming\n",
+    "        streamer.stop_streaming()\n",
+    "        print(\"Demo complete\")\n",
+    "        \n",
+    "        # Get final figure\n",
+    "        final_fig = streamer.get_current_figure()\n",
+    "        \n",
+    "        # Convert tracker to DataFrame\n",
+    "        results_df = pd.DataFrame({\n",
+    "            'timestamp': pattern_tracker['timestamps'],\n",
+    "            'patterns': pattern_tracker['detected_patterns'],\n",
+    "            'price_change': pattern_tracker['price_changes']\n",
+    "        })\n",
+    "        \n",
+    "        return final_fig, results_df\n",
+    "\n",
+    "    # Example function for testing all real-time functionality\n",
+    "    def test_real_time_features(symbol=\"AAPL\", period=\"3mo\"):\n",
+    "        \"\"\"Test all real-time and dynamic visualization features\"\"\"\n",
+    "        print(f\"Loading data for {symbol}...\")\n",
+    "        df = yf.download(symbol, period=period)\n",
+    "        \n",
+    "        results = {}\n",
+    "        \n",
+    "        # Test streaming candlestick visualizer\n",
+    "        print(\"Testing streaming visualizer...\")\n",
+    "        streamer = StreamingCandlestickVisualizer(df)\n",
+    "        streamer.start_streaming(data_source='simulation')\n",
+    "        \n",
+    "        time.sleep(5)  # Let it run for 5 seconds\n",
+    "        \n",
+    "        # Detect patterns in real-time\n",
+    "        patterns = streamer.detect_patterns_realtime()\n",
+    "        \n",
+    "        # Get current figure\n",
+    "        results['streaming_fig'] = streamer.get_current_figure()\n",
+    "        \n",
+    "        # Stop streaming\n",
+    "        streamer.stop_streaming()\n",
+    "        \n",
+    "        # Test dynamic visualization updater\n",
+    "        print(\"Testing dynamic visualizer...\")\n",
+    "        updater = DynamicVisualizationUpdater(df)\n",
+    "        \n",
+    "        # Change timeframe\n",
+    "        results['daily_fig'] = updater.change_timeframe('1d')\n",
+    "        \n",
+    "        # Add indicators\n",
+    "        updater.add_indicator('sma', {'period': 20})\n",
+    "        updater.add_indicator('sma', {'period': 50})\n",
+    "        updater.add_indicator('bollinger_bands')\n",
+    "        results['indicator_fig'] = updater.get_current_figure()\n",
+    "        \n",
+    "        # Add pattern detection\n",
+    "        updater.add_pattern_detection('engulfing')\n",
+    "        updater.add_pattern_detection('doji')\n",
+    "        results['pattern_fig'] = updater.get_current_figure()\n",
+    "        \n",
+    "        # Apply theme\n",
+    "        results['themed_fig'] = updater.apply_theme('plotly_dark')\n",
+    "        \n",
+    "        print(\"Real-time tests completed\")\n",
+    "        return results"
    ]
   }
  ],
