Added sample data feature to basic pattern detection examples

--- a/docs/examples/candlestick/basic_pattern_detection.ipynb
+++ b/docs/examples/candlestick/basic_pattern_detection.ipynb
@@ -41,7 +41,39 @@
     "\n",
     "# Add the parent directory to the path so we can import the patternforge module\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
-    "from patternforge.candlestick.patterns import CandlestickPatterns"
+    "from patternforge.candlestick.patterns import CandlestickPatterns\n",
+    "\n",
+    "# Set up plotting\n",
+    "plt.style.use('ggplot')\n",
+    "plt.rcParams['figure.figsize'] = [12, 8]\n",
+    "plt.rcParams['font.size'] = 12"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Loading sample data\n",
+    "We'll use Yahoo Finance to get some historical stock data for our analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define date range\n",
+    "end_date = datetime.now()\n",
+    "start_date = end_date - timedelta(days=365)  # One year of data\n",
+    "\n",
+    "# Download data for Apple\n",
+    "symbol = 'AAPL'\n",
+    "data = yf.download(symbol, start=start_date, end=end_date)\n",
+    "\n",
+    "# Display the first few rows\n",
+    "print(f\"Downloaded {len(data)} rows of data for {symbol}\")\n",
+    "data.head()"
    ]
   }
  ],
