Helper function created

--- a/docs/examples/candlestick/basic_pattern_detection.ipynb
+++ b/docs/examples/candlestick/basic_pattern_detection.ipynb
@@ -75,6 +75,106 @@
     "print(f\"Downloaded {len(data)} rows of data for {symbol}\")\n",
     "data.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's create a helper function for visualizing candlestick data and patterns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_candlestick_with_patterns(df, patterns_dict, title='Candlestick Chart with Patterns', figsize=(15, 10)):\n",
+    "    \"\"\"\n",
+    "    Plot candlestick chart with pattern markers\n",
+    "    \n",
+    "    Args:\n",
+    "        df: DataFrame with OHLC data\n",
+    "        patterns_dict: Dictionary with pattern name as key and boolean Series as value\n",
+    "        title: Chart title\n",
+    "        figsize: Figure size\n",
+    "    \"\"\"\n",
+    "    fig, ax = plt.subplots(figsize=figsize)\n",
+    "    \n",
+    "    # Plot candlestick\n",
+    "    width = 0.6\n",
+    "    width2 = width * 0.8\n",
+    "    \n",
+    "    up = df[df.Close >= df.Open]\n",
+    "    down = df[df.Close < df.Open]\n",
+    "    \n",
+    "    # Plot up candles\n",
+    "    ax.bar(up.index, up.Close-up.Open, width=width2, bottom=up.Open, color='green', alpha=0.5)\n",
+    "    ax.bar(up.index, up.High-up.Close, width=0.1, bottom=up.Close, color='green', alpha=0.5)\n",
+    "    ax.bar(up.index, up.Open-up.Low, width=0.1, bottom=up.Low, color='green', alpha=0.5)\n",
+    "    \n",
+    "    # Plot down candles\n",
+    "    ax.bar(down.index, down.Open-down.Close, width=width2, bottom=down.Close, color='red', alpha=0.5)\n",
+    "    ax.bar(down.index, down.High-down.Open, width=0.1, bottom=down.Open, color='red', alpha=0.5)\n",
+    "    ax.bar(down.index, down.Close-down.Low, width=0.1, bottom=down.Low, color='red', alpha=0.5)\n",
+    "    \n",
+    "    # Plot patterns\n",
+    "    colors = plt.cm.tab10.colors\n",
+    "    marker_y_positions = df['High'] * 1.01  # Just above the highest point\n",
+    "    pattern_found = False\n",
+    "    \n",
+    "    for i, (pattern_name, pattern_series) in enumerate(patterns_dict.items()):\n",
+    "        if pattern_series is None or isinstance(pattern_series, tuple):\n",
+    "            continue\n",
+    "            \n",
+    "        pattern_indices = df.index[pattern_series]\n",
+    "        if len(pattern_indices) > 0:\n",
+    "            pattern_found = True\n",
+    "            ax.scatter(pattern_indices, marker_y_positions.loc[pattern_indices], \n",
+    "                      marker='^', color=colors[i % len(colors)], s=100, label=pattern_name)\n",
+    "    \n",
+    "    # Add bullish/bearish pattern tuples\n",
+    "    for i, (pattern_name, pattern_tuple) in enumerate(patterns_dict.items()):\n",
+    "        if not isinstance(pattern_tuple, tuple):\n",
+    "            continue\n",
+    "            \n",
+    "        bullish, bearish = pattern_tuple\n",
+    "        bullish_indices = df.index[bullish]\n",
+    "        bearish_indices = df.index[bearish]\n",
+    "        \n",
+    "        if len(bullish_indices) > 0:\n",
+    "            pattern_found = True\n",
+    "            ax.scatter(bullish_indices, marker_y_positions.loc[bullish_indices], \n",
+    "                      marker='^', color=colors[i % len(colors)], s=100, label=f\"Bullish {pattern_name}\")\n",
+    "            \n",
+    "        if len(bearish_indices) > 0:\n",
+    "            pattern_found = True\n",
+    "            ax.scatter(bearish_indices, marker_y_positions.loc[bearish_indices], \n",
+    "                      marker='v', color=colors[(i+1) % len(colors)], s=100, label=f\"Bearish {pattern_name}\")\n",
+    "    \n",
+    "    # Format the chart\n",
+    "    ax.set_title(title, fontsize=16)\n",
+    "    ax.set_ylabel('Price', fontsize=14)\n",
+    "    ax.grid(True, alpha=0.3)\n",
+    "    \n",
+    "    # Format x-axis with dates\n",
+    "    ax.xaxis.set_major_formatter(mdates.DateFormatter('%Y-%m-%d'))\n",
+    "    plt.xticks(rotation=45)\n",
+    "    \n",
+    "    # Add volume as a subplot\n",
+    "    if 'Volume' in df.columns:\n",
+    "        volume_ax = ax.twinx()\n",
+    "        volume_ax.bar(df.index, df.Volume, width=width, alpha=0.3, color='gray')\n",
+    "        volume_ax.set_ylabel('Volume', fontsize=14)\n",
+    "        volume_ax.set_ylim(0, df.Volume.max() * 4)  # Set upper limit to avoid overlap\n",
+    "    \n",
+    "    # Show legend only if patterns were found\n",
+    "    if pattern_found:\n",
+    "        ax.legend(loc='upper left')\n",
+    "    \n",
+    "    plt.tight_layout()\n",
+    "    return fig, ax\n"
+   ]
   }
  ],
  "metadata": {
