Added comment on next part to fix

--- a/docs/examples/candlestick/pattern_visualization.ipynb
+++ b/docs/examples/candlestick/pattern_visualization.ipynb
@@ -43731,6 +43731,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "NEED TO FIX THIS SECTION!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Interactive Features Demonstration"
    ]
   },
